--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<!-- <app-asset-provision ></app-asset-provision> -->
-<p>this is working or not</p>
+<app-asset-provision ></app-asset-provision>
+<!-- <p>this is working or not</p> -->
